--- a/tactics/Assembly-CSharp.csproj
+++ b/tactics/Assembly-CSharp.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
      <Compile Include="Assets\Battle\Scripts\AssetHolder.cs" />
      <Compile Include="Assets\Battle\Scripts\BattleAction\BattleAction.cs" />
+     <Compile Include="Assets\Battle\Scripts\BattleAction\BattleMoveAction.cs" />
      <Compile Include="Assets\Battle\Scripts\BattleAction\BattleSkillAction.cs" />
      <Compile Include="Assets\Battle\Scripts\BattleAgent\BattleAgent.cs" />
      <Compile Include="Assets\Battle\Scripts\BattleAgent\ManualBattleAgent.cs" />
@@ -62,6 +63,7 @@
      <Compile Include="Assets\Battle\Scripts\BattleManager.cs" />
      <Compile Include="Assets\Battle\Scripts\BattleMenu\BattleMenu.cs" />
      <Compile Include="Assets\Battle\Scripts\BattleMenu\BattleMenuListSelection.cs" />
+     <Compile Include="Assets\Battle\Scripts\BattleMenu\BattleMenuMoveSelection.cs" />
      <Compile Include="Assets\Battle\Scripts\BattleMenu\BattleMenuRootSelection.cs" />
      <Compile Include="Assets\Battle\Scripts\BattleMenu\BattleMenuSkillAreaConfirmation.cs" />
      <Compile Include="Assets\Battle\Scripts\BattleMenu\BattleMenuSkillAreaSelection.cs" />
@@ -70,7 +72,9 @@
      <Compile Include="Assets\Battle\Scripts\BattleObject\BattleObject.cs" />
      <Compile Include="Assets\Battle\Scripts\BattleObject\BattleObject2D.cs" />
      <Compile Include="Assets\Battle\Scripts\BattleQueue\BattleAgentDecision.cs" />
+     <Compile Include="Assets\Battle\Scripts\BattleQueue\BattleJump.cs" />
      <Compile Include="Assets\Battle\Scripts\BattleQueue\BattleQueueMember.cs" />
+     <Compile Include="Assets\Battle\Scripts\BattleQueue\BattleWalk.cs" />
      <Compile Include="Assets\Battle\Scripts\BattleSelectableZone\BattleSelectableManhattanRadius.cs" />
      <Compile Include="Assets\Battle\Scripts\BattleSelectableZone\BattleSelectableRectangle.cs" />
      <Compile Include="Assets\Battle\Scripts\BattleSelectableZone\BattleSelectableZone.cs" />
