Better AI (Part 1)
Implemented units, so now agents know who they're aligned with and won't
attack each other.
Partially implemented a very basic "choose a random offense command from
valid options" AI behaviour, which so far can do action but not
movement. Part 2 will be dealing with the movement aspect.
Checked the AI target display and confirmed that it worked on the first
try. Yay!

--- a/tactics/Assembly-CSharp.csproj
+++ b/tactics/Assembly-CSharp.csproj
@@ -69,6 +69,7 @@
      <Compile Include="Assets\Battle\Scripts\BattleAgent\BattleBehaviour\BattleBehaviour.cs" />
      <Compile Include="Assets\Battle\Scripts\BattleAgent\BattleBehaviour\BattleBerserkBehaviour.cs" />
      <Compile Include="Assets\Battle\Scripts\BattleAgent\BattleBehaviour\BattleOffensiveBehaviour.cs" />
+     <Compile Include="Assets\Battle\Scripts\BattleAgent\BattleDangerZone\BattleDangerZone.cs" />
      <Compile Include="Assets\Battle\Scripts\BattleAgent\BattleUnit.cs" />
      <Compile Include="Assets\Battle\Scripts\BattleCommand\BattleCommand.cs" />
      <Compile Include="Assets\Battle\Scripts\BattleCommand\BattleCommandAction\BattleCommandAction.cs" />
