--- a/tactics/Assembly-CSharp.csproj
+++ b/tactics/Assembly-CSharp.csproj
@@ -198,6 +198,8 @@
      <Compile Include="Assets\Menu\Scripts\MainMenuManager.cs" />
      <Compile Include="Assets\Menu\Scripts\MenuManager.cs" />
      <Compile Include="Assets\Menu\Scripts\NewGameMenu.cs" />
+     <Compile Include="Assets\Menu\Scripts\PartyMenu\PartyMemberList.cs" />
+     <Compile Include="Assets\Menu\Scripts\PartyMenu\PartyMemberOption.cs" />
      <Compile Include="Assets\Menu\Scripts\TransitionMenu\MainMenuOption.cs" />
      <Compile Include="Assets\Menu\Scripts\TransitionMenu\TransitionMenu.cs" />
      <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface-Mobile.shader" />
